[Aalekh] ADD: Implemented API for forget password using rabbitMQ and mailer also done swagger implementation and rspec testing
