# config/routes.rb
@@ -5,6 +5,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       post "users/signup" => "users#signup"
       post "users/login" => "users#login"
+      post "users/forget" => "users#forgetPassword"
     end
   end
 end
